# token-ledger

./: .aiignore  .codexignore  .cursorignore  .gitignore  AGENTS.md  README.md  README_CN.md  index.html  latest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: desktop-ci.yml  release.yml
docs/: index.md
docs/howto/: auto-update.md  package-desktop-app.md  use-desktop-dashboard.md
scripts/: build-updater-manifest.mjs  compare-ts-rust.mjs  package-app.sh
src/: i18n.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: dashboard.toml
src-tauri/src/: app_state.rs  commands.rs  date_keys.rs  lib.rs  main.rs  models.rs  parser.rs  pricing.rs  repository.rs  store.rs
src/api/: demo.ts  tauri.ts  updater.ts
src/dto/: dashboard.ts
