[package]
name = "tokenledger"
version = "0.4.2"
description = "TokenLedger desktop app"
authors = ["join"]
edition = "2021"
default-run = "tokenledger"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
